# topheroes-autoclicker

./: .gitignore  README.md  build.py  main.py  pyproject.toml  run.py
notebook/: screen_image_clicker.ipynb
scripts/: embed_assets.py
src/: embedded_assets.py  main.py
src/core/: __init__.py  config.py  detector.py  models.py  updater.py  window.py
src/gui/: __init__.py  app.py
