[project]
name = "topheroes-autoclicker"
version = "1.1.0"
description = "Auto-clicker for Top Heroes game with image detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mss>=10.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
autoclicker = "src.main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
